<resources>
    <string name="app_name">AzxDemo</string>
    <string name="view_pager_guide">ViewPager引导页效果</string>
    <string name="retrofit_request">Retrofit网络请求</string>
    <string name="app_foreground">App是否在前台或者后台</string>

    <string name="recycler_view">RecyclerView使用</string>

    <string name="address_book">调用通讯录</string>
    <string name="grid_password">6位数格子密码</string>
    <string name="tab_fragment_button">Tab标签页</string>
    <string name="radio_btn">radio button来实现</string>
    <string name="tab1_fragment_button_text">标签页1</string>
    <string name="tab2_fragment_button_text">标签页2</string>
    <string name="tab3_fragment_button_text">标签页3</string>
    <string name="tab4_fragment_button_text">标签页4</string>
    <string name="tab1_text">标签页1内容</string>
    <string name="tab2_text">标签页2内容</string>
    <string name="tab3_text">标签页3内容</string>
    <string name="tab4_text">标签页4内容</string>
    <string name="product_text">理财产品</string>
    <string name="org_text">专区产品</string>
    <string name="calendar">日历</string>
    <string name="calendar_2">日历2</string>
    <string name="calendar_3">日历3</string>
    <string name="calendar_4">日历4</string>
    <string name="image_play">图片轮播</string>
    <string name="webp_img">webP格式图片的使用</string>
    <string name="guide_btn">透明指示层</string>
    <string name="listview_group_btn">ListView分组</string>
    <string name="webview_btn">H5播放音频</string>
    <string name="video_btn">视频播放</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="retrofit">retrofit使用</string>
    <string name="mvp">mvp模式使用</string>
    <string name="mvp2">mvp模式使用(二)</string>
    <string name="mvvm">mvvm模式使用</string>
    <string name="dialog">dialog使用</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">存</string>
    <string name="load">读</string>
    <string name="id">ID:</string>
    <string name="firstname">FirstName:</string>
    <string name="lastname">LastName:</string>
    <string name="sharesdk">shareSdk分享</string>
    <string name="textview">文本显示</string>
    <string name="gilde">Glide图片加载框架</string>
    <string name="share">分享</string>
    <string name="login">登录</string>

    <string name="hello">个推开放平台Sdk演示程序</string>
    <string name="up">绑定sdk</string>
    <string name="down">解绑sdk</string>
    <string name="no_clientid">(none)</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="unbind_alias">解除别名绑定</string>

</resources>
