<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/view_pager_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_pager_guide"/>

    <Button
        android:id="@+id/retrofit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_request"/>

    <Button
        android:id="@+id/address_book_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_book"/>

    <Button
        android:id="@+id/recycler_view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view"/>

    <Button
        android:id="@+id/grid_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_password"/>

    <Button
        android:id="@+id/tab_fragment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tab_fragment_button"/>

</LinearLayout>
