<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.activity.MyTabActivity">

    <FrameLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab1_fragment_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/tab1_fragment_button_text"/>

        <RadioButton
            android:id="@+id/tab2_fragment_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tab2_fragment_button_text"
            />

        <RadioButton
            android:id="@+id/tab3_fragment_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tab3_fragment_button_text"
            />

        <RadioButton
            android:id="@+id/tab4_fragment_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tab4_fragment_button_text"/>
    </RadioGroup>

</LinearLayout>
